add a little more ui using popover events

--- a/data/css/about_passwords.css
+++ b/data/css/about_passwords.css
@@ -13,7 +13,7 @@ body {
 }
 
 /* The white background content wrapper */
-.content {
+.page {
   background-color: #fff;
   padding: 20px;
   margin: 0 -20px; /* negative indent the amount of the padding to maintain the grid system */
