work towards a site specific panel

--- a/data/css/about_passwords.css
+++ b/data/css/about_passwords.css
@@ -82,6 +82,13 @@ body {
   border: 1px solid #eee;
   border-radius: 6px;
 }
+
+.entry:hover {
+  border: 1px solid #eee;
+  box-shadow: 0 0 1px #666666 inset;
+  background-image: -moz-linear-gradient(center top , #eee 0%, #ccc 100%);
+}
+
 .entry div {
   display: inline;
 }
@@ -89,3 +96,6 @@ body {
 .entry .username {
   color: black;
 }
+
+
+
