--- a/data/css/about_passwords.css
+++ b/data/css/about_passwords.css
@@ -5,6 +5,9 @@ html, body {
 body {
   padding-top: 40px; /* 40px to make the container go all the way to the bottom of the topbar */
 }
+a:focus {
+  outline: none;
+}
 .container > footer p {
   text-align: center; /* center align it with the container */
 }
@@ -30,6 +33,7 @@ body {
   background-color: #f5f5f5;
   padding: 20px 20px 10px;
   margin: -20px -20px 20px;
+  background-image: -moz-linear-gradient(center top , #f5f5f5 0%, #ccc 100%);
 }
 
 .page-header h1 {
@@ -41,6 +45,11 @@ body {
 }
 .page-header .row div:last-child {
   text-align: left;
+}
+
+.modal .close {
+  margin-top: 0px;
+  margin-left: 8px;
 }
 
 .strong {
@@ -75,7 +84,8 @@ body {
   border: 0;
 }
 
-.entry {
+.entry,
+.login-entry {
   display: block;
   margin: 4px;
   padding: 4px;
@@ -84,16 +94,35 @@ body {
 }
 
 .entry:hover {
-  border: 1px solid #eee;
+  border: 1px solid #ccc;
   box-shadow: 0 0 1px #666666 inset;
+}
+
+.selected {
   background-image: -moz-linear-gradient(center top , #eee 0%, #ccc 100%);
 }
 
-.entry div {
+.login-entry {
+  display: block;
+  border: 1px solid #eee;
+  border-radius: 6px;
+  margin: 0;
+  padding: 0;
+}
+
+.login-entry > div {
+  padding: 8px;
+}
+
+.login-entry-header {
+  background-image: -moz-linear-gradient(center top , #eee 0%, #ccc 100%);
+}
+
+.entry div, .flags div {
   display: inline;
 }
 
-.entry .username {
+.username {
   color: black;
 }
 
